--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ main{
 }
 .section-top{
     display: flex;
+   
 }
 .section-center{
     display: flex;
@@ -33,9 +34,7 @@ main{
 .section-bottom{
     display: flex;
 }
-footer{
-    background-color: #030303;
-}
+
 .menu{
     display: flex;
     flex-direction: row;
@@ -51,7 +50,7 @@ footer{
     height: 30px;
     width: 100px;
 }
-ul{
+.menu-home{
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -82,21 +81,24 @@ ul{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
     gap: 10px ;
     
 }
-.top-card{
+.top-card{ 
+    
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    gap: 4px;
+    justify-content: center;
     align-items: center;
-    width: 250px;  
+    width: 100%;  
     height: 20px;
     padding: 5px; 
     
 }
 .top-card-texto{
-    font-size: 12px;
+    font-size: 11px;
     border: 1px solid #727171;
     border-radius: 15px;
     padding: 4px;
@@ -120,10 +122,10 @@ ul{
     font-family: Arial;
 }
 .btn-card{
-    background-color: #ff0000;
     padding: 10px;
     display: flex;
     flex-direction: column;
+    justify-self: flex-end;
     gap: 15px;
     width: 160px;
 }
@@ -152,4 +154,48 @@ ul{
 .bi{
     color: black;
     padding: 2px;
+}
+
+footer{
+    background-color: #333333;
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+}
+.lista-footer{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    margin-top: 10px;
+    
+}
+.direitos-footer{   
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    color: #fcfcfc;
+    font-family: Arial;
+    font-size: 11px;
+    
+}
+
+.titulo-footer{
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 14px;
+    list-style: none;
+    font-weight: bold;
+}
+
+.texto-footer{
+    width: 280px;
+    list-style: none;
+    font-family: Arial;
+    font-size: 12px;
+    color: #ffffff;
+    height: 20px;
 }
